[gd_scene load_steps=4 format=3 uid="uid://bgrvknk7qs3xg"]

[ext_resource type="Texture2D" uid="uid://tbh47vlqi7hw" path="res://icon.svg" id="1_ehsff"]
[ext_resource type="Script" path="res://ui.gd" id="1_stchh"]

[sub_resource type="ButtonGroup" id="ButtonGroup_24kxj"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -991.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_stchh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -208.0
offset_right = 151.0
offset_bottom = 208.0
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_24kxj")
text = "A"
icon = ExtResource("1_ehsff")

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_24kxj")
text = "B"
icon = ExtResource("1_ehsff")

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_24kxj")
text = "C"
icon = ExtResource("1_ehsff")

[connection signal="toggled" from="VBoxContainer/Button" to="." method="_on_button_toggled"]
[connection signal="toggled" from="VBoxContainer/Button2" to="." method="_on_button_2_toggled"]
[connection signal="toggled" from="VBoxContainer/Button3" to="." method="_on_button_3_toggled"]
